[package]
name = "starry-vdso"
version = "0.1.0"
edition = "2024"

[dependencies]
axerrno = { git = "https://github.com/Starry-OS/axerrno.git", rev = "f1e2bca" }
axplat = "0.2"
log = "0.4"
xmas-elf = "0.9"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }